Tab-complete with java 8